--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 asgiref==3.9.2
 Django==5.2.6
 et_xmlfile==2.0.0
+gunicorn==23.0.0
 numpy==2.2.6
 openpyxl==3.1.5
+packaging==25.0
 pandas==2.3.3
 python-dateutil==2.9.0.post0
 pytz==2025.2
